Grammar/Rules.ebnf
statement ::= (for | objective | constraint | set) ";"

for ::= "for" iteration_assign {", " iteration_assign} ":" statement 
iteration_assign ::= variable "=" (variable | number) "to" (variable | number)

objective ::= ("max" | "min" ) [ "imize" ] ":", expression

constraint ::= [ name ":"] (relation_constraint | range_constraint)
name ::=  letter { word } ":"

set ::= "set" assign {"," assign}
assign ::= variable "=" expression

expression ::= {("+" | "-")} (sum | term ("+" | "-") expression | term)
sum ::= "sum" "[" iteration_assign "] (" expression ")"

term ::= number [variable]
number ::= integer | float
variable ::= letter { word } [ subscript ]

relation_constraint ::= expression relation expression
range_constraint ::= increasing | decreasing

increasing ::= expression less_than expression less_than expression
decreasing ::= expression greater_than expression greater_than expression

relation ::= less_than | greater_than | equal

integer ::= [0-9] {[0-9]}
float ::= [0-9] "." {[0-9]} | {[0-9]} "." [0-9] {[0-9]}
letter ::= [a-zA-Z]
word ::= [a-zA-Z_0-9]
subscript ::= "_"variable
less_than ::= "<" | "<="
greater_than ::= ">" | ">="
equal ::= "="
